Deploying the CEED website with mkdocs, version 0.14.0

--- a/codesign/index.html
+++ b/codesign/index.html
@@ -284,7 +284,7 @@ to the efforts in all thrusts.</p>
 is led by the <a href="../fe/">Finite Elements</a> thrust but involves working closely
 with vendors (<a href="../hw/">Hardware</a> thrust) and software technology efforts
 (<a href="../sw/">Software</a> thrust) to take full advantage of exascale hardware. Making
-sure that these libraries meet the needs of and are successfully incorporated in
+sure that these libraries meet the needs of, and are successfully incorporated in,
 ECP applications is based on collaboration between the <a href="../ap/">Applications</a> and
 <a href="../fe/">Finite Elements</a> thrusts.</p>
 <p>In addition to libraries of highly performant kernels, a key product of the CEED
@@ -309,7 +309,7 @@ and <a href="https://exascaleproject.org/focus_area/software">ECP software techn
 projects to highlight performance critical paths (e.g. size of on package memory,
 internode latency, hardware collectives) and provide simple examples of meaningful
 high-order computations.  One of the goals in these interactions will be to
-impact the design of <a href="https://exascaleproject.org/what-is-exascale">exascale architectures</a>
+impact the design of <a href="https://exascaleproject.org/what-is-exascale">exascale architectures</a>,
 and system and application software, for improved portability and performance of
 the high-order algorithms.</p></div>
         </div>
