Deploying the CEED website with mkdocs, version 0.14.0

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -297,12 +297,16 @@
 <h3 id="publications">Publications</h3>
 <h4 id="2017">2017</h4>
 <ol>
-<li>A. Abdelfattah, A. Haidar, S. Tomov, J. Dongarra, <a href="">Factorization and Inversion of a Million Matrices using GPUs: Challenges and Countermeasures</a>, <em>Proceedings of the 2017 International Conference on Computational Science, ICCS'17</em>, Zürich, Switzerland, June 12-14, <em>Procedia Computer Science</em>, <strong>2017</strong>.</li>
-<li>A. Abdelfattah, M. Baboulin, V. Dobrev, J. Dongarra, A. Haidar, I. Karlin, Tz. Kolev, I. Masliah, and S. Tomov, <a href="https://library.eecs.utk.edu/storage/609phpB4IcsSut-eecs-17-749.pdf">Small Tensor Operations on Advanced Architectures for High-order Applications</a>, Technical report UT-EECS-17-749, EECS Department, Univerity of Tennessee, <strong>2017</strong>.</li>
+<li>V. Dobrev, Tz. Kolev, D. Kuzmin, R. Rieben and V. Tomov, <a href="http://dx.doi.org/10.17877/DE290R-18000">Sequential limiting in continuous and discontinuous Galerkin methods for the Euler equations</a>, submitted, <strong>2017</strong></li>
+<li>A. Abdelfattah, A. Haidar, S. Tomov, J. Dongarra, <a href="https://doi.org/10.1016/j.procs.2017.05.250">Factorization and Inversion of a Million Matrices using GPUs: Challenges and Countermeasures</a>, <em>Proceedings of the 2017 International Conference on Computational Science, ICCS'17</em>, Zürich, Switzerland, June 12-14, <em>Procedia Computer Science</em>, <strong>2017</strong>.</li>
+<li>A. Abdelfattah, M. Baboulin, V. Dobrev, J. Dongarra, A. Haidar, I. Karlin, Tz. Kolev, I. Masliah, and S. Tomov, <a href="https://library.eecs.utk.edu/storage/609phpB4IcsSut-eecs-17-749.pdf">Small Tensor Operations on Advanced Architectures for High-order Applications</a>, Technical report UT-EECS-17-749, EECS Department, University of Tennessee, <strong>2017</strong>.</li>
+<li>R. Anderson, V. Dobrev, Tz. Kolev, D. Kuzmin, M. Quezada de Luna, R. Rieben and V. Tomov,
+<a href="https://doi.org/10.1016/j.jcp.2016.12.031">High-order local maximum principle preserving (MPP) discontinuous Galerkin finite element method for the transport equation</a>, Journal of Computational Physics, 334:102–124, <strong>2017</strong></li>
 </ol>
 <p><br></p>
 <h4 id="2016">2016</h4>
 <ol>
+<li>V. Dobrev, Tz. Kolev, R. Rieben and V. Tomov, <a href="http://dx.doi.org/10.1002/fld.4236">Multi-material closure model for high-order finite element Lagrangian hydrodynamics</a>, <em>Int. J. Numer. Meth. Fluids</em>, 82(10), pp. 689–706, <strong>2016</strong></li>
 <li>A. Abdelfattah, M. Baboulin, V. Dobrev, J. Dongarra, C. Earl, J. Falcou, A. Haidar, I. Karlin, Tz. Kolev, I. Masliah, S. Tomov, <a href="http://www.icl.utk.edu/sites/icl/files/publications/2016/icl-utk-866-2016.pdf">High-performance Tensor Contractions for GPUs</a>, <em>Procedia Computer Science</em>, Volume 80, Pages 108-118, ISSN 1877-0509, <strong>2016</strong>.</li>
 <li>M. B.E., Y. Peet, P. Fischer, and J. Lottes, <a href="http://www.sciencedirect.com/science/article/pii/S0021999115008050">A spectrally accurate method for overlapping grid solution of incompressible Navier-Stokes equations</a>, <em>J. Comp. Phys.</em>, 307:60–93, <strong>2016</strong>.</li>
 <li>M. Otten, J. Gong, A. Mametjanov, A. Vose, J. Levesque, P. Fischer, and M. Min, <a href="http://www.mcs.anl.gov/publication/mpiopenacc-implementation-high-order-electromagnetics-solver-gpudirect-communication">An MPI/OpenACC implementation of a high order electromagnetics solver with GPUDirect communication</a>, <em>The International Journal of High Performance Computing Application</em>, 30(3):320–334, <strong>2016</strong>.</li>
