--- a/fe/index.html
+++ b/fe/index.html
@@ -284,7 +284,7 @@
 <h2 id="finite-element-thrust-wzxhzdk0">Finite Element Thrust <img src="../img/ho-spaces-padding.png" align="right" alt="FE logo" height="250" width="300"></h2>
 <p>The goal of CEED's Finite Element (FE) thrust, led by <a href="https://people.llnl.gov/dobrev1">Veselin Dobrev</a>
 from <a href="http://www.llnl.gov">Lawrence Livermore National Laboratory</a>, is to continue to improve
-the state-of-the-art spectral-element/high-order finite element algorithms and kernels in the
+the state-of-the-art spectral element/high-order finite element algorithms and kernels in the
 CEED software targeting exascale architectures.</p>
 <h3 id="why-high-order-finite-elements">Why High-Order Finite Elements?</h3>
 <p>Efficient exploitation of
