--- a/meshing/index.html
+++ b/meshing/index.html
@@ -280,7 +280,7 @@ material interfaces or due to mesh motion in simulations with moving meshes
 resolution, improved symmetry preservation, better solution adaptivity and
 increased robustness for problems where the mesh is being deformed in time.</p>
 <p>The CEED software supports arbitrary order quadrilateral, hexahedral, triangular
-and tetrahedral meshes and our team members are developing algorithms for
+and tetrahedral meshes, and our team members are developing algorithms for
 high-order mesh optimization and solution transfer between deformed high-order
 meshes (remap).</p>
 <p><em>This is an active area of research for our team and we are interested in
