--- a/pubs/index.html
+++ b/pubs/index.html
@@ -322,10 +322,10 @@
 <li>M. Otten, R. A. Shah, N. F. Scherer, M. Min, M. Pelton, and S. K. Gray, <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.92.125432">Entanglement of two, three and four plasmonically coupled quantum dots</a>, <em>Physical Review B</em>, 92:125432, <strong>2015</strong>.</li>
 <li>D. A. May, J. Brown, and L. Le Pourhiet. <a href="https://www.mcs.anl.gov/publication/ptatin3d-high-performance-methods-long-term-lithospheric-dynamics-0">pTatin3D: High-performance methods for long-term lithospheric dynamics</a>, In Proceedings of <em>SC14: International Conference for High Performance Computing, Networking, Storage and Analysis</em>. ACM, <strong>2014</strong>.</li>
 <li>R. Anderson, V. Dobrev, Tz. Kolev and R. Rieben, <a href="http://computation.llnl.gov/blast/ALE_IJNMF.pdf">Monotonicity in high-order curvilinear finite element ALE remap</a>, <em>Int. J. Numer. Meth. Fluids</em>, 77(5), pp. 249–273, <strong>2014</strong>.</li>
-<li>Tz. Kolev and P. Vassilevski, <a href="https://computation.llnl.gov/hypre/kolev-vassilevski-ads-2012.pdf">Parallel auxiliary space AMG solver for H(div) problems</a>,  <em>SIAM J. Sci. Comp.</em>, 34, pp. A3079–A3098, <strong>2012</strong>.</li>
+<li>Tz. Kolev and P. Vassilevski, <a href="https://doi.org/10.1137/110859361">Parallel auxiliary space AMG solver for H(div) problems</a>,  <em>SIAM J. Sci. Comp.</em>, 34, pp. A3079–A3098, <strong>2012</strong>.</li>
 <li>V. Dobrev, Tz. Kolev and R. Rieben, <a href="http://dx.doi.org/10.1137/120864672">High-order curvilinear finite element methods for Lagrangian hydrodynamics</a>, <em>SIAM J. Sci. Comp.</em>, 34, pp. B606–B641, <strong>2012</strong>.</li>
 <li>J. Brown, <a href="http://link.springer.com/article/10.1007/s10915-010-9396-8">Efficient nonlinear solvers for nodal high-order finite elements in 3D</a>, <em>Journal of Scientific Computing</em>, 45:48–63, <strong>2010</strong>. doi:10.1007/s10915-010-9396-8</li>
-<li>Tz. Kolev and P. Vassilevski, <a href="http://www.global-sci.org/jcm/volumes/v27n5/pdf/275-604.pdf">Parallel auxiliary space AMG for H(curl) problems</a>, <em>J. Comput. Math.</em>, 27, pp. 604-623, <strong>2009</strong>.</li>
+<li>Tz. Kolev and P. Vassilevski, <a href="https://computation.llnl.gov/projects/hypre-scalable-linear-solvers-multigrid-methods/Kolev-2009-par-aux-space.pdf">Parallel auxiliary space AMG for H(curl) problems</a>, <em>J. Comput. Math.</em>, 27, pp. 604-623, <strong>2009</strong>.</li>
 </ol>
 <hr />
 <h3 id="presentations">Presentations</h3>
