--- a/thrusts/index.html
+++ b/thrusts/index.html
@@ -289,9 +289,9 @@ and benchmarking infrastructure, and coordinate CEED software releases.</p>
 <hr />
 <h4 id="finite-elements-thrust-fe"><a href="../fe/">Finite Elements Thrust (FE)</a></h4>
 <p>The goal of CEED's Finite Element thrust is to continue to improve the
-state-of-the-art spectral-element/high-order finite element algorithms and
+state-of-the-art spectral element/high-order finite element algorithms and
 kernels in the CEED software targeting exascale architectures, connect and
-contributes to the efforts of the other thrusts, and lead the development of
+contribute to the efforts of the other thrusts, and lead the development of
 discretization libraries, benchmarks and miniapps.</p></div>
         </div>
     
