--- a/vis/index.html
+++ b/vis/index.html
@@ -273,16 +273,16 @@
 <p>Accurate visualization of general finite element meshes and functions in the de
 Rham complex requires finite element knowledge that may not be present in
 visualization tools employed by applications. The visualization needs to account
-for the orders of the mesh and solution fields as well as the type of finite
+for the orders of the mesh and solution fields, as well as the type of finite
 element basis used for each of them.</p>
 <p>An additional challenge for high-order meshes and functions is that there is no
 common community standard for the description of high-order data at arbitrary
 other.</p>
 <p>CEED is working with visualization and application teams to develop a
-standard, that not only improves visualization capabilities but also enables
+standard that not only improves visualization capabilities but also enables
 consistent data transfer between high-order applications.</p>
 <p>Our work is based on the current capabilities in <a href="../mfem/">MFEM</a>, illustrated in
-its native <a href="http://glvis.org">GLVis</a> visualization tool as well as in the
+its native <a href="http://glvis.org">GLVis</a> visualization tool, as well as in the
 <a href="https://visit.llnl.gov">VisIt</a> visualization and data analysis application.</p>
 <p><em>This is an active area of research for our team and we are interested in
  collaboration.</em></p>
