--- a/about/index.html
+++ b/about/index.html
@@ -307,7 +307,7 @@ in support of the nation’s <a href="https://obamawhitehouse.archives.gov/the-p
 <li><a href="http://www.mcs.anl.gov/person/barry-smith">Barry Smith</a></li>
 <li><a href="https://www.scorec.rpi.edu/~cwsmith/">Cameron Smith</a></li>
 <li><a href="https://people.llnl.gov/beckingsale1">David Beckingsale</a></li>
-<li><a href="http://dsmedina.com/">David Medina</a></li>
+<li><a href="http://dsmedina.com/#/projects">David Medina</a></li>
 <li><a href="https://www.researchgate.net/profile/Ian_Karlin">Ian Karlin</a></li>
 <li><a href="http://www.netlib.org/utk/people/JackDongarra/">Jack Dongarra</a> &mdash; Lead for the <a href="../sw/">Hardware</a> thrust</li>
 <li><a href="https://jedbrown.org/">Jed Brown</a> &mdash; Lead for the <a href="../sw/">Software</a> thrust</li>
