--- a/pubs/index.html
+++ b/pubs/index.html
@@ -303,6 +303,7 @@
 <li>A. Abdelfattah, M. Baboulin, V. Dobrev, J. Dongarra, A. Haidar, I. Karlin, Tz. Kolev, I. Masliah, and S. Tomov, <a href="https://library.eecs.utk.edu/storage/609phpB4IcsSut-eecs-17-749.pdf">Small Tensor Operations on Advanced Architectures for High-order Applications</a>, Technical report UT-EECS-17-749, EECS Department, University of Tennessee, <strong>2017</strong>.</li>
 <li>R. Anderson, V. Dobrev, Tz. Kolev, D. Kuzmin, M. Quezada de Luna, R. Rieben and V. Tomov,
 <a href="https://doi.org/10.1016/j.jcp.2016.12.031">High-order local maximum principle preserving (MPP) discontinuous Galerkin finite element method for the transport equation</a>, Journal of Computational Physics, 334:102–124, <strong>2017</strong></li>
+<li>Bazilevs, Y., Kamran, K., Moutsanidis, G., Benson, D. J., &amp; Oñate, E, <a href="https://doi:10.1007/s00466-017-1394-3">A new formulation for air-blast fluid–structure interaction using an immersed approach. Part I: basic methodology and FEM-based simulations</a>, Computational Mechanics, 1-18, <strong>2017</strong>.</li>
 </ol>
 <p><br></p>
 <h4 id="2016">2016</h4>
@@ -312,6 +313,8 @@
 <li>M. B.E., Y. Peet, P. Fischer, and J. Lottes, <a href="http://www.sciencedirect.com/science/article/pii/S0021999115008050">A spectrally accurate method for overlapping grid solution of incompressible Navier-Stokes equations</a>, <em>J. Comp. Phys.</em>, 307:60–93, <strong>2016</strong>.</li>
 <li>M. Otten, J. Gong, A. Mametjanov, A. Vose, J. Levesque, P. Fischer, and M. Min, <a href="http://www.mcs.anl.gov/publication/mpiopenacc-implementation-high-order-electromagnetics-solver-gpudirect-communication">An MPI/OpenACC implementation of a high order electromagnetics solver with GPUDirect communication</a>, <em>The International Journal of High Performance Computing Application</em>, 30(3):320–334, <strong>2016</strong>.</li>
 <li>J. Gong, S. Markidis, E. Laure, M. Otten, P. Fischer, M. Min, <a href="http://link.springer.com/article/10.1007/s11227-016-1744-5">Nekbone Performance on GPUs with OpenACC and CUDA Fortran Implementations</a>, <em>Special issue on Sustainability on Ultrascale Computing Systems and Applications: Journal of Supercomputing</em>, <strong>2016</strong>.</li>
+<li>Ibanez, Daniel A., et al. <a href="https://doi.org/10.1145/2814935">PUMI: Parallel unstructured mesh infrastructure.</a> ACM Transactions on Mathematical Software (TOMS) 42.3 <strong>2016</strong>.</li>
+<li>Smith, Cameron W., et al. <a href="https://doi.org/10.1145/2949550.2949650">In-memory Integration of Existing Software Components for Parallel Adaptive Unstructured Mesh Workflows.</a> Proceedings of the XSEDE16 Conference on Diversity, Big Data, and Science at Scale. ACM, <strong>2016</strong>.</li>
 </ol>
 <p><br></p>
 <h4 id="2015-and-earlier">2015 and earlier</h4>
@@ -322,6 +325,7 @@
 <li>M. Otten, R. A. Shah, N. F. Scherer, M. Min, M. Pelton, and S. K. Gray, <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.92.125432">Entanglement of two, three and four plasmonically coupled quantum dots</a>, <em>Physical Review B</em>, 92:125432, <strong>2015</strong>.</li>
 <li>D. A. May, J. Brown, and L. Le Pourhiet. <a href="https://www.mcs.anl.gov/publication/ptatin3d-high-performance-methods-long-term-lithospheric-dynamics-0">pTatin3D: High-performance methods for long-term lithospheric dynamics</a>, In Proceedings of <em>SC14: International Conference for High Performance Computing, Networking, Storage and Analysis</em>. ACM, <strong>2014</strong>.</li>
 <li>R. Anderson, V. Dobrev, Tz. Kolev and R. Rieben, <a href="http://computation.llnl.gov/blast/ALE_IJNMF.pdf">Monotonicity in high-order curvilinear finite element ALE remap</a>, <em>Int. J. Numer. Meth. Fluids</em>, 77(5), pp. 249–273, <strong>2014</strong>.</li>
+<li>Kamran, Kazem, et al. <a href="https://doi.org/10.1142/S021820251340006X">A compressible Lagrangian framework for modeling the fluid–structure interaction in the underwater implosion of an aluminum cylinder.</a> Mathematical Models and Methods in Applied Sciences 23.02 <strong>2013</strong>.</li>
 <li>Tz. Kolev and P. Vassilevski, <a href="https://doi.org/10.1137/110859361">Parallel auxiliary space AMG solver for H(div) problems</a>,  <em>SIAM J. Sci. Comp.</em>, 34, pp. A3079–A3098, <strong>2012</strong>.</li>
 <li>V. Dobrev, Tz. Kolev and R. Rieben, <a href="http://dx.doi.org/10.1137/120864672">High-order curvilinear finite element methods for Lagrangian hydrodynamics</a>, <em>SIAM J. Sci. Comp.</em>, 34, pp. B606–B641, <strong>2012</strong>.</li>
 <li>J. Brown, <a href="http://link.springer.com/article/10.1007/s10915-010-9396-8">Efficient nonlinear solvers for nodal high-order finite elements in 3D</a>, <em>Journal of Scientific Computing</em>, 45:48–63, <strong>2010</strong>. doi:10.1007/s10915-010-9396-8</li>
