Deploying the CEED website with mkdocs, version 0.16.3

--- a/miniapps/index.html
+++ b/miniapps/index.html
@@ -358,9 +358,20 @@ thus separating the pointwise physics from finite element and meshing concerns.<
 <p><center></p>
 <h3 id="nekcem-ceedling-new">NekCEM CEEDling <span class="badge">New</span></h3>
 <p></center></p>
-<p>NekCEM CEEDling is a <a href="../nek/">NekCEM</a> miniapp, solving the time-domain Maxwell and drift-diffusion
-equations.</p>
-<p><em>NekCEM CEEDling will be released soon as part of CEED. Stay tuned for more details...</em></p>
+<p>NekCEM CEEDling is a <a href="../nek/">NekCEM</a> miniapp, solving the time-domain Maxwell
+equations for electromagnetic systems.  It allows software and hardware
+developers to understand the basic structure and computational costs of NekCEM
+over a broad spectrum of architectures ranging from software-based simulators
+running at one ten-thousandth the speed of current processors to exascale
+platforms running millions of times faster than single-core platforms.</p>
+<p>NekCEM provides flexibility to adapt new programming approaches for scalability
+and performance studies on a variety of platforms without having to understand
+all the features of NekCEM, currently supporting CPU/GPU runs.</p>
+<p><center>
+<a href="https://github.com/NekCEM/NekCEM_CEEDling"><button type="button" class="btn btn-success">
+<strong>Download NekCEM CEEDling</strong>
+</button></a>
+</center></p>
 <hr />
 <p><center></p>
 <h3 id="holmes-new">Holmes <span class="badge">New</span></h3>
