--- a/ceed1am/index.html
+++ b/ceed1am/index.html
@@ -319,19 +319,41 @@ In addition to gathering together many of the CEED researchers, the meeting will
 include representatives of the ECP management, hardware vendors, software
 technology and other interested projects.</p>
 <h3 id="meeting-agenda">Meeting Agenda</h3>
-<p>...</p>
+<p>Draft Agenda for Tuesday, August 15th
+Breakfast (8:00 – 8:30)
+Welcome/Overview (Ian, Tzanio, ECP) (8:30 – 9:30)
+Break (9:30 – 10:00)
+Finite Element Thrust (10:00 – 11:30)
+Applications Thrust (11:30 – 12:30)
+Catered lunch (12:30 – 1:30)
+Software Thrust (1:30 – 2:30)
+Hardware Thrust (2:30 – 3:30)
+Break (3:30 – 4:00)
+Proxy-app Project  (David Richards) (4:00 – 4:30)
+DSE Team (Robin Goldstone) (4:30 – 5:00)
+Closing/Future plans (Tzanio) (5:00 – 5:30)
+Unstructured time (5:30 – 7:00)
+Meeting Dinner at Campo di Bocce (7:00 – )
+Draft Agenda for Wednesday, August 16th
+morning – tour of NIF, lunch @ Central Café (9:00 – 12:00)
+Guest Talks (12:30 – 3:30)
+Open time for Coding/Meetings with visitors (3:30 – 6:00)
+Dinner on your own</p>
 <h3 id="catering-and-dinner">Catering and Dinner</h3>
-<p>...</p>
+<p>Breakfast and Lunch will be included with a separate fee.  Dinner on 8/15 will be provided with that fee as well.</p>
 <h3 id="lodging-options">Lodging Options</h3>
-<p>...</p>
+<p>There are many hotels in Livermore.  A few from the about 10 hotels   in Livermore are below.  Other hotels are available in Pleasanton and other nearby cities.  If you stay outside of Livermore we recommend staying west of the city to have a reverse commute to the lab.</p>
+<p>Double Tree http://doubletree3.hilton.com/en/hotels/california/doubletree-by-hilton-hotel-livermore-LVKCHDT/index.html
+Courtyard by Marriot https://www.marriott.com/hotels/travel/oaklm-courtyard-livermore/
+Holiday Inn Express https://www.ihg.com/holidayinnexpress/hotels/us/en/livermore/lvmre/hoteldetail?qRef=sr&amp;qDest=Livermore%2C+CA%2C+United+States&amp;qRpn=1&amp;qChld=0&amp;qAAR=6CBARC&amp;qSrt=sBR&amp;qSHp=1&amp;qSmP=3&amp;qIta=99618783&amp;qGRM=0&amp;qLng=-121.766899&amp;qRdU=1&amp;qRms=1&amp;srb_u=1&amp;qAdlt=1&amp;qPSt=0&amp;qRtP=6CBARC&amp;qCiMy=062017&amp;qCoD=06&amp;qLat=37.6819&amp;qCiD=05&amp;qCoMy=062017&amp;qRRSrt=rt&amp;qRad=30&amp;qRpp=20&amp;qBrs=hi.ex.rs.ic.cp.in.sb.cw.cv.6c.vn.ul.ki.sp.nd.ct&amp;qWch=0</p>
 <h3 id="about-livermore-and-llnl">About Livermore and LLNL</h3>
-<p>...
-National Ignition Facility, tour</p>
+<p>Founded in 1869, Livermore is California’s oldest wine region, framed by award-winning wineries, farm lands and ranches that mirror the valley’s western heritage.  As home to renowned science and technology centers, Lawrence Livermore National Laboratory and Sandia National Laboratory, Livermore is a technological hub and an academically engaged community. It has become an integral part of the Bay Area, successfully competing in the global market powered by its wealth of research, technology and innovation.</p>
+<p>For more than 60 years, the Lawrence Livermore National Laboratory has applied science and technology to make the world a safer place.  World class facilities include the National Ignition Facility, and the Terascale facility hosting Sequoia, currently the world's fifth fastest supercomputer.</p>
 <h3 id="questions">Questions</h3>
 <p>Please contact the organizers:
 - Ian Karlin
 - Tzanio Kolev
-- ...</p></div>
+- Jamie Lewis</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
     
