Deploying the CEED website with mkdocs, version 0.14.0

--- a/ceed1am/index.html
+++ b/ceed1am/index.html
@@ -348,12 +348,7 @@
 <p>Founded in 1869, Livermore is California’s oldest wine region, framed by award-winning wineries, farm lands and ranches that mirror the valley’s western heritage.  As home to renowned science and technology centers, Lawrence Livermore National Laboratory and Sandia National Laboratory, Livermore is a technological hub and an academically engaged community. It has become an integral part of the Bay Area, successfully competing in the global market powered by its wealth of research, technology and innovation.</p>
 <p>For more than 60 years, the Lawrence Livermore National Laboratory has applied science and technology to make the world a safer place.  World class facilities include the National Ignition Facility, and the Terascale facility hosting Sequoia, currently the world's fifth fastest supercomputer.</p>
 <h3 id="questions">Questions?</h3>
-<p>Please contact the meeting organizers:</p>
-<ul>
-<li>Jamie Lewis and Irene Dias, casc-admin@llnl.gov</li>
-<li>Ian Karlin, karlin1@llnl.gov</li>
-<li>Tzanio Kolev, kolev1@llnl.gov</li>
-</ul></div>
+<p>Please contact the meeting organizers at owner-llnl-ceed-meeting@listserv.llnl.gov</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
     
