Deploying the CEED website with mkdocs, version 0.14.0

--- a/ceed1am/index.html
+++ b/ceed1am/index.html
@@ -310,29 +310,11 @@
 <h3 id="overview">Overview</h3>
 <p>CEED will hold its first annual meeting in August 15-17, 2017 at the <a href="https://hpcinnovationcenter.llnl.gov/location-and-directions">HPC Innovation Center</a> of Lawrence Livermore National Laboratory in Livermore, California. The goal of the meeting is to report on the progress in the center, deepen existing and establish new connections with ECP hardware vendors, ECP software technologies projects and other collaborators, plan project activities and brainstorm/work as a group to make technical progress. In addition to gathering together many of the CEED researchers, the meeting will include representatives of the ECP management, hardware vendors, software technology and other interested projects.</p>
 <h3 id="meeting-agenda">Meeting Agenda</h3>
-<h4 id="draft-agenda-for-tuesday-august-15th">Draft Agenda for Tuesday, August 15th</h4>
+<p>Latest agenda is on the CVENT website:</p>
 <ul>
-<li>Breakfast (8:00 – 8:30)</li>
-<li>Welcome/Overview (Ian, Tzanio, ECP) (8:30 – 9:30)</li>
-<li>Break (9:30 – 10:00)</li>
-<li>Finite Element Thrust (10:00 – 11:30)</li>
-<li>Applications Thrust (11:30 – 12:30)</li>
-<li>Catered lunch (12:30 – 1:30)</li>
-<li>Software Thrust (1:30 – 2:30)</li>
-<li>Hardware Thrust (2:30 – 3:30)</li>
-<li>Break (3:30 – 4:00)</li>
-<li>Proxy-app Project  (David Richards) (4:00 – 4:30)</li>
-<li>DSE Team (Robin Goldstone) (4:30 – 5:00)</li>
-<li>Closing/Future plans (Tzanio) (5:00 – 5:30)</li>
-<li>Unstructured time (5:30 – 7:00)</li>
-<li>Meeting Dinner at <a href="http://campodibocce.com/">Campo di Bocce</a> (7:00 – )</li>
-</ul>
-<h4 id="draft-agenda-for-wednesday-august-16th">Draft Agenda for Wednesday, August 16th</h4>
-<ul>
-<li>Tour of NIF / LVOC meetings, lunch @ Central Café (9:00 – 12:00)</li>
-<li>Guest talks (12:30 – 3:30)</li>
-<li>Open time for Coding/Meetings with visitors (3:30 – 6:00)</li>
-<li>Dinner on your own</li>
+<li>Go to http://www.cvent.com/d/b5qfph/1Q</li>
+<li>Login with: <code>CEED2017</code></li>
+<li>Click on the <code>Agenda</code> tab</li>
 </ul>
 <h3 id="catering-and-dinner">Catering and Dinner</h3>
 <p>Breakfast and Lunch will be included with a separate fee.  Dinner on 8/15 will be provided with that fee as well.</p>
@@ -348,7 +330,7 @@
 <p>Founded in 1869, Livermore is California’s oldest wine region, framed by award-winning wineries, farm lands and ranches that mirror the valley’s western heritage.  As home to renowned science and technology centers, Lawrence Livermore National Laboratory and Sandia National Laboratory, Livermore is a technological hub and an academically engaged community. It has become an integral part of the Bay Area, successfully competing in the global market powered by its wealth of research, technology and innovation.</p>
 <p>For more than 60 years, the Lawrence Livermore National Laboratory has applied science and technology to make the world a safer place.  World class facilities include the National Ignition Facility, and the Terascale facility hosting Sequoia, currently the world's fifth fastest supercomputer.</p>
 <h3 id="questions">Questions?</h3>
-<p>Please contact the meeting organizers at owner-llnl-ceed-meeting@listserv.llnl.gov</p></div>
+<p>Please contact the meeting organizers at: <a href="mailto:llnl-ceed-meeting@listserv.llnl.gov">llnl-ceed-meeting@listserv.llnl.gov</a>.</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
     
