Deploying the CEED website with mkdocs, version 0.14.0

--- a/ceed1am/index.html
+++ b/ceed1am/index.html
@@ -310,9 +310,9 @@
 <h3 id="overview">Overview</h3>
 <p>CEED will hold its first annual meeting in August 15-17, 2017 at the <a href="https://hpcinnovationcenter.llnl.gov/location-and-directions">HPC Innovation Center</a> of Lawrence Livermore National Laboratory in Livermore, California. The goal of the meeting is to report on the progress in the center, deepen existing and establish new connections with ECP hardware vendors, ECP software technologies projects and other collaborators, plan project activities and brainstorm/work as a group to make technical progress. In addition to gathering together many of the CEED researchers, the meeting will include representatives of the ECP management, hardware vendors, software technology and other interested projects.</p>
 <h3 id="meeting-agenda">Meeting Agenda</h3>
-<p>Latest agenda is on the CVENT website:</p>
+<p>Latest agenda:</p>
 <ul>
-<li>Go to http://www.cvent.com/d/b5qfph/1Q</li>
+<li>Go to the <a href="http://www.cvent.com/d/b5qfph/1Q">CVENT website</a></li>
 <li>Login with: <code>CEED2017</code></li>
 <li>Click on the <code>Agenda</code> tab</li>
 </ul>
