Deploying the CEED website with mkdocs, version 0.14.0

--- a/index.html
+++ b/index.html
@@ -325,13 +325,13 @@ The CEED software will also include optimized assembly support for low-order met
 <div class="bs-sidebar hidden-print well" role="complementary">
     <ul class="nav bs-sidenav">
     <li class="main"><a href="../news/">What's New?</a> </li>
-       <li> <a href="../news/#first-ceed-annual-meeting-to-be-held-at-llnl">&#9658;&nbsp;First annual meeting to be held at LLNL</a> </li>
-       <li> <a href="../news/#gpu-hackaton-2017">&#9658;&nbsp;CEED participated in GPU hackathon at BNL</a> </li>
-       <li> <a href="../news/#workshop-on-batched-reproducible-and-reduced-precision-blas">&#9658;&nbsp;Workshop on batched BLAS</a> </li>
-       <li> <a href="../news/#software-release-mfem-v33">&#9658;&nbsp;Software release: MFEM v3.3</a> </li>
-       <li> <a href="../news/#ceed-co-design-center-announced">&#9658;&nbsp;CEED co-design center announced</a> </li>
+       <li> <a href="../news/#nek5000-hackathon-at-uiuc">&#9658;&nbsp;Nek5000 hackathon at UIUC</a> </li>
+       <li> <a href="../news/#ceed-organizing-minisimposium-at-icosahom-2018">&#9658;&nbsp;CEED organizing ICOSAHOM minisimposium</a> </li>
+       <li> <a href="../news/#gpu-ports-of-nek-and-laghos">&#9658;&nbsp;GPU ports of Nek and Laghos</a> </li>
+       <li> <a href="../news/#first-ceed-annual-meeting-held-at-llnl">&#9658;&nbsp;CEED first annual meeting</a> </li>
+       <li> <a href="../news/#new-laghos-and-nekcem-ceedling-minniaps-released">&#9658;&nbsp;New Laghos and NekCEM CEEDling miniaps released</a> </li>
+       <li> <a href="../news/#ceed-bps-and-benchmarks-repository-released">&#9658;&nbsp;CEED BPs and benchmarks repository released</a> </li>
        <li> <a href="../news/">More updates...</a> </li>
-
     <hr style="background-color:white; height:20px; margin-left:-1px;  margin-right:-1px; margin-top:15px; margin-bottom:10px " />
     <li class="main" style="padding:0"><a href="https://exascaleproject.org/exascale-computing-project/">ECP Co-Design</a> </li>
        <li> <a href="http://www.energy.gov">U.S. Department of Energy</a></li>
