Deploying the CEED website with mkdocs, version 0.14.0

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -303,6 +303,7 @@
 <h3 id="publications">Publications</h3>
 <h4 id="2017">2017</h4>
 <ol>
+<li>K. Swirydowicz, N. Chalmers, A. Karakus, T. Warburton, <a href="https://arxiv.org/abs/1711.00903">Acceleration of tensor-product operations for high-order finite element methods</a>, submitted, <strong>2017</strong></li>
 <li>J. Solberg, E. Merzari, H. Yuan, A. Obabko and P. Fischer, S. Lee, J. Lai, M. Delgado, S. J. Lee, and Y. Hassan, <a href="">High-Fidelity Simulation of Flow Induced Vibrations in Helical Steam Generators for Small Modular Reactors</a>, <strong>Best Paper Award</strong> at <em>The 17th International Topical Meeting on Nuclear Reactor Thermal Hydraulics (NURETH-17)</em>, September, <strong>2017</strong>.</li>
 <li>V. Dobrev, Tz. Kolev, C. Lee, V. Tomov and P. Vassilevski, <a href="">Algebraic Hybridization and Static Condensation with Application to Scalable H(div) Preconditioning</a>, submitted, <strong>2017</strong>.</li>
 <li>S. Patel, P. Fisher, M. Min, and A. Tomboulides, <a href="http://meetings.aps.org/Meeting/DFD17/Session/D32.6">A Characteristic-based, spectral element method for moving-domain problems</a>, <em>J. Sci. Comp.</em>, submitted, <strong>2017</strong>.</li>
