--- a/index.html
+++ b/index.html
@@ -325,12 +325,12 @@ The CEED software will also include optimized assembly support for low-order met
 <div class="bs-sidebar hidden-print well" role="complementary">
     <ul class="nav bs-sidenav">
     <li class="main"><a href="../news/">What's New?</a> </li>
-       <li> <a href="../news/#nek5000-hackathon-at-uiuc">&#9658;&nbsp;Nek5000 hackathon</a> </li>
+       <li> <a href="../news/#initial-release-of-libceed-the-ceed-api-library">&#9658;&nbsp;libCEED released</a> </li>
+       <li> <a href="../news/#software-release-mfem-v332">&#9658;&nbsp;MFEM v3.3.2 released</a> </li>
+       <li> <a href="../news/#software-release-nek5000-v170">&#9658;&nbsp;Nek5000 v17.0 released</a> </li>
+       <li> <a href="../news/#ceed-participates--xsdk-and-fastmath">&#9658;&nbsp;CEED packages in xSDK and FASTMath</a> </li>
        <li> <a href="../news/#ceed-organizing-minisimposium-at-icosahom-2018">&#9658;&nbsp;ICOSAHOM 2018 minisimposium planned</a> </li>
-       <li> <a href="../news/#gpu-ports-of-nek-and-laghos">&#9658;&nbsp;GPU ports of Nek and Laghos</a> </li>
-       <li> <a href="../news/#first-ceed-annual-meeting-held-at-llnl">&#9658;&nbsp;CEED first annual meeting</a> </li>
-       <li> <a href="../news/#new-laghos-and-nekcem-ceedling-miniaps-released">&#9658;&nbsp;Laghos and NekCEM miniapps released</a> </li>
-       <li> <a href="../news/#ceed-bps-and-benchmarks-repository-released">&#9658;&nbsp;Benchmarks code, formulations released</a> </li>
+       <li> <a href="../news/#6th-nek5000-user-meeting-to-be-held-at-u-florida">&#9658;&nbsp;Nek meeting in U Florida</a> </li>
        <li> <a href="../news/">More updates...</a> </li>
     <hr style="background-color:white; height:20px; margin-left:-1px;  margin-right:-1px; margin-top:15px; margin-bottom:10px " />
     <li class="main" style="padding:0"><a href="https://exascaleproject.org/exascale-computing-project/">ECP Co-Design</a> </li>
