Deploying the CEED website with mkdocs, version 0.16.3

--- a/libceed/index.html
+++ b/libceed/index.html
@@ -277,7 +277,7 @@
 <!-- ... fa-comment, fa-comment-o, fa-comments, fa-comments-o, fa-bullhorn --></div> <!-- toc on top on mobile -->
             <div class="col-md-9" role="main">
 
-<h2 id="libceed"><a href="https://github.com/CEED/libCEED">libCEED</a> <img src="../img/libCEED.png" align="right" alt="libCEED logo" height="155" width="300"></h2>
+<h2 id="libceed"><a href="https://github.com/CEED/libCEED">libCEED</a> <a href="../img/libCEED.png"><img src="../img/libCEED.png" align="right" alt="libCEED logo" height="155" width="300"></a></h2>
 <p>libCEED is a high-order API library, that provides a common algebraic low-level
 operator description, allowing a wide variety of applications to take advantage
 of the efficient operator evaluation algorithms in the different CEED packages
