Deploying the CEED website with mkdocs, version 0.14.0

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -309,7 +309,8 @@
 <h3 id="publications">Publications</h3>
 <h4 id="2018">2018</h4>
 <ol>
-<li>A. Karakus, N. Chalmers, K. Swirydowicz, T. Warburton, <a href="https://arxiv.org/abs/1801.00246">GPU Acceleration of a High-Order Discontinuous Galerkin Incompressible Flow Solver</a>, submitted, <strong>2018</strong></li>
+<li>V. Dobrev, P. Knupp, Tz. Kolev, K. Mittal, V. Tomov, <a href="">The Target-Matrix Optimization Paradigm for High-Order Meshes</a>, submitted, <strong>2018</strong>.</li>
+<li>A. Karakus, N. Chalmers, K. Swirydowicz, T. Warburton, <a href="https://arxiv.org/abs/1801.00246">GPU Acceleration of a High-Order Discontinuous Galerkin Incompressible Flow Solver</a>, submitted, <strong>2018</strong>.</li>
 <li>A. Barker, V. Dobrev, J. Gopalakrishnan and T. Kolev, <a href="https://arxiv.org/abs/1612.00838">A scalable preconditioner for a DPG method</a>, <em>SIAM J. Sci. Comp.</em>, accepted, <strong>2018</strong>.</li>
 <li>R. Anderson, V. Dobrev, Tz. Kolev, R. Rieben and V. Tomov, <a href="https://doi.org/10.1137/17M1116453">High-Order Multi-Material ALE Hydrodynamics</a>,  <em>SIAM J. Sci. Comp.</em>, 40(1):B32-B58, <strong>2018</strong>.</li>
 <li>V. Dobrev, Tz. Kolev, D. Kuzmin, R. Rieben and V. Tomov, <a href="https://doi.org/10.1016/j.jcp.2017.12.012">Sequential limiting in continuous and discontinuous Galerkin methods for the Euler equations</a>, Journal of Computational Physics,
