--- a/pubs/index.html
+++ b/pubs/index.html
@@ -321,7 +321,7 @@
 <ol>
 <li>K. Swirydowicz, N. Chalmers, A. Karakus, T. Warburton, <a href="https://arxiv.org/abs/1711.00903">Acceleration of tensor-product operations for high-order finite element methods</a>, submitted, <strong>2017</strong></li>
 <li>J. Solberg, E. Merzari, H. Yuan, A. Obabko and P. Fischer, S. Lee, J. Lai, M. Delgado, S. J. Lee, and Y. Hassan, <a href="">High-Fidelity Simulation of Flow Induced Vibrations in Helical Steam Generators for Small Modular Reactors</a>, <strong>Best Paper Award</strong> at <em>The 17th International Topical Meeting on Nuclear Reactor Thermal Hydraulics (NURETH-17)</em>, September, <strong>2017</strong>.</li>
-<li>V. Dobrev, Tz. Kolev, C. Lee, V. Tomov and P. Vassilevski, <a href="">Algebraic Hybridization and Static Condensation with Application to Scalable H(div) Preconditioning</a>, submitted, <strong>2017</strong>.</li>
+<li>V. Dobrev, Tz. Kolev, C. Lee, V. Tomov and P. Vassilevski, <a href="https://arxiv.org/abs/1801.08914">Algebraic Hybridization and Static Condensation with Application to Scalable H(div) Preconditioning</a>, submitted, <strong>2017</strong>.</li>
 <li>S. Patel, P. Fisher, M. Min, and A. Tomboulides, <a href="http://meetings.aps.org/Meeting/DFD17/Session/D32.6">A Characteristic-based, spectral element method for moving-domain problems</a>, <em>J. Sci. Comp.</em>, submitted, <strong>2017</strong>.</li>
 <li>I. Masliah, A. Abdelfattah, A. Haidar, S. Tomov, M. Baboulin, J. Falcou, and J. Dongarra, <a href="">Algorithms and optimization techniques for high-performance matrix-matrix multiplications of very small matrices</a>, <em>Parallel Computing (PARCO)</em>, submitted, <strong>2017</strong>.</li>
 <li>K. Raffenetti et. al, P. Fischer, M. Min, and P. Balaji, <a href="">Why is MPI so slow? Analyzing the fundamental limits in implementing MPI-3.1</a>, accepted, <em>SC'17</em>, <strong>2017</strong>.</li>
@@ -405,6 +405,7 @@ and the <a href="https://www.anl.gov/articles/co-design-centers-help-make-next-g
 <li>CEED-tagged topics on <a href="https://exascaleproject.org/topics/ceed">ECP's website</a>.</li>
 <li>ANL's <a href="https://www.anl.gov/science/exascale-computing">exascale computing website</a>.</li>
 <li>LLNL's <a href="http://exascale.llnl.gov">exascale computing website</a>.</li>
+<li>Blog of Virginia Tech's <a href="https://www.paranumal.com/blog">Parallel Numerical Algorithms research group</a>.</li>
 <li>U.S. Department of Energy <a href="http://energy.gov/downloads/doe-exascale-initiative">Exascale Initiative</a>.</li>
 </ul></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
