Deploying the CEED website with mkdocs, version 0.16.3

--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@ The CEED software will also include optimized assembly support for low-order met
 <div class="bs-sidebar hidden-print well" role="complementary">
     <ul class="nav bs-sidenav">
     <li class="main"><a href="../news/">What's New?</a> </li>
+       <li> <a href="../news/#new-website-launched-by-the-virginia-tech-ceed-team">&#9658;&nbsp;New VT CEED team website</a> </li>
        <li> <a href="../news/#initial-release-of-libceed-the-ceed-api-library">&#9658;&nbsp;libCEED released</a> </li>
        <li> <a href="../news/#software-release-mfem-v332">&#9658;&nbsp;MFEM v3.3.2 released</a> </li>
        <li> <a href="../news/#software-release-nek5000-v170">&#9658;&nbsp;Nek5000 v17.0 released</a> </li>
