Deploying the CEED website with mkdocs, version 0.16.3

--- a/software/index.html
+++ b/software/index.html
@@ -277,7 +277,7 @@
 components are available from:</p>
 <p><center>
 <a href="../ceed-1.0/"><button type="button" class="btn btn-primary">
-<strong>CEED-1.0</strong>
+<strong>&nbsp;&nbsp;CEED-1.0&nbsp;&nbsp;</strong>
 </button></a>
 &nbsp;&nbsp;&nbsp;
 <a href="https://github.com/CEED/libCEED/releases/tag/v0.2"><button type="button" class="btn btn-primary">
@@ -287,7 +287,8 @@ components are available from:</p>
 <a href="https://github.com/ceed/nek5000/releases/tag/v17.0"><button type="button" class="btn btn-primary">
 <strong>Nek5000-17.0</strong>
 </button></a>
-&nbsp;&nbsp;&nbsp;
+</center></p>
+<p><center>
 <a href="https://github.com/ceed/mfem/releases/tag/v3.3.2"><button type="button" class="btn btn-primary">
 <strong>mfem-3.3.2</strong>
 </button></a>
