--- a/index.html
+++ b/index.html
@@ -339,10 +339,12 @@ The CEED software will also include optimized assembly support for low-order met
 <div class="bs-sidebar hidden-print well" role="complementary">
     <ul class="nav bs-sidenav">
     <li class="main"><a href="../news/">What's New?</a> </li>
-       <li> <a href="../ceed-1.0/">&#9658;&nbsp;CEED v1.0 released &nbsp;<span class="label label-primary">New</span></a> </li>
-       <li> <a href="../news/#initial-release-of-libceed-the-ceed-api-library">&#9658;&nbsp;libCEED v0.2 released &nbsp;<span class="label label-primary">New</span></a> </li>
-       <li> <a href="../news/#ceed-organizing-minisymposium-at-icosahom-2018">&#9658;&nbsp;ICOSAHOM 2018 minisimposium planned</a> </li>
-       <li> <a href="../news/#ceed-participates-in-xsdk-and-fastmath">&#9658;&nbsp;CEED packages in xSDK and FASTMath</a> </li>
+       <li> <a href="../news/#software-release-ceed-1.0">&#9658;&nbsp;CEED v1.0 released &nbsp;<span class="label label-primary">New</span></a> </li>
+       <li> <a href="../news/#software-release-libceed-0.2">&#9658;&nbsp;libCEED v0.2 released &nbsp;<span class="label label-primary">New</span></a> </li>
+       <li> <a href="../news/#panayot-vassilevski-named-siam-fellow">&#9658;&nbsp;Vassilevski SIAM fellow</a> </li>
+       <li> <a href="../news/#benchmark-release-by-paranumal-team">&#9658;&nbsp;Paranumal benchmarks </a> </li>
+       <li> <a href="../news/#ceed-organizing-minisymposium-at-icosahom-2018">&#9658;&nbsp;ICOSAHOM minisimposium</a> </li>
+       <li> <a href="../news/#ceed-participates-in-xsdk-and-fastmath">&#9658;&nbsp;CEED in xSDK, FASTMath</a> </li>
        <li> <a href="../news/">More updates...</a> </li>
     <hr style="background-color:white; height:20px; margin-left:-1px;  margin-right:-1px; margin-top:15px; margin-bottom:10px " />
     <li class="main" style="padding:0"><a href="https://exascaleproject.org/exascale-computing-project/">ECP Co-Design</a> </li>
