--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@ The CEED software will also include optimized assembly support for low-order met
 <div class="bs-sidebar hidden-print well" role="complementary">
     <ul class="nav bs-sidenav">
     <li class="main"><a href="../news/">What's New?</a> </li>
-       <li> <a href="../news/#software-release-ceed-1.0">&#9658;&nbsp;CEED v1.0 released &nbsp;<span class="label label-primary">New</span></a> </li>
-       <li> <a href="../news/#software-release-libceed-0.2">&#9658;&nbsp;libCEED v0.2 released &nbsp;<span class="label label-primary">New</span></a> </li>
+       <li> <a href="../news/#software-release-ceed-10">&#9658;&nbsp;CEED v1.0 released &nbsp;<span class="label label-primary">New</span></a> </li>
+       <li> <a href="../news/#software-release-libceed-02">&#9658;&nbsp;libCEED v0.2 released &nbsp;<span class="label label-primary">New</span></a> </li>
        <li> <a href="../news/#panayot-vassilevski-named-siam-fellow">&#9658;&nbsp;Vassilevski SIAM fellow</a> </li>
        <li> <a href="../news/#benchmark-release-by-paranumal-team">&#9658;&nbsp;Paranumal benchmarks </a> </li>
        <li> <a href="../news/#ceed-organizing-minisymposium-at-icosahom-2018">&#9658;&nbsp;ICOSAHOM minisimposium</a> </li>
