Deploying the CEED website with mkdocs, version 0.14.0

--- a/ceed-1.0/index.html
+++ b/ceed-1.0/index.html
@@ -327,7 +327,7 @@ following 12 packages, plus the CEED <em>meta-package</em>:</p>
 <a href="#using-the-installation">Using the Installation</a> below. (Quick summary: you can
 build and install all of the above packages with: <code>spack install ceed</code>)</p>
 <p>If you are familiar with Spack, consider using the following machine-specific
-configurations for CEED (see also <a href="https://github.com/xsdk-project/installxSDK/tree/master/platformFiles)">xSDK's config files</a>).</p>
+configurations for CEED (see also <a href="https://github.com/xsdk-project/installxSDK/tree/master/platformFiles">xSDK's config files</a>).</p>
 <table>
 <thead>
 <tr>
