--- a/ceed2am/index.html
+++ b/ceed2am/index.html
@@ -343,7 +343,7 @@
 <li><a href="http://hiltongardeninn3.hilton.com/en/hotels/colorado/hilton-garden-inn-boulder-WBUBOGI/maps-directions/index.html">Garden Inn (Hilton)</a> - 10 minute walk</li>
 </ul>
 <h3 id="questions">Questions?</h3>
-<p>Please contact the meeting organizers at: <a href="mailto:llnl-ceed-meeting@listserv.llnl.gov">llnl-ceed-meeting@listserv.llnl.gov</a>.</p></div>
+<p>Please contact the meeting organizers at: <a href="mailto:ceed-meeting@llnl.gov">ceed-meeting@llnl.gov</a>.</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
     
