--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ The CEED software will also include optimized assembly support for low-order met
     <li class="main"><a href="../news/">What's New?</a> </li>
        <li> <a href="../news/##software-release-mfem-v33">&#9658;&nbsp;MFEM v3.4 released&nbsp;<span class="label label-primary">New</span></a> </li>
        <li> <a href="../news/#software-release-ceed-v10">&#9658;&nbsp;CEED v1.0 released &nbsp;<span class="label label-primary">New</span></a> </li>
-       <li> <a href="../news/#software-release-libceed-v02">&#9658;&nbsp;libCEED v0.2 released &nbsp;<span class="label label-primary">New</span></a> </li>
+       <li> <a href="../news/#software-release-libceed-v02">&#9658;&nbsp;libCEED v0.2 released</a> </li>
        <li> <a href="../news/#panayot-vassilevski-named-siam-fellow">&#9658;&nbsp;Vassilevski SIAM fellow</a> </li>
        <li> <a href="../news/#ceed-organizing-minisymposium-at-icosahom-2018">&#9658;&nbsp;ICOSAHOM minisimposium</a> </li>
        <li> <a href="../news/#ceed-participates-in-xsdk-and-fastmath">&#9658;&nbsp;CEED in xSDK, FASTMath</a> </li>
