Deploying the CEED website with mkdocs, version 0.17.4

--- a/software/index.html
+++ b/software/index.html
@@ -300,6 +300,10 @@ components are available from:</p>
 <a href="https://github.com/ceed/Nekbone/releases/tag/v17.0"><button type="button" class="btn btn-primary">
 <strong>Nekbone-17.0</strong>
 </button></a>
+&nbsp;&nbsp;&nbsp;
+<a href="https://github.com/libocca/occa/releases/tag/v1.0.1"><button type="button" class="btn btn-primary">
+<strong>OCCA-1.0</strong>
+</button></a>
 </center></p>
 <p>Please use the <a href="https://github.com/CEED/forum">CEED user forum</a> to report
 <a href="https://github.com/CEED/forum/issues/new?labels=bug">bugs</a> or post
