Deploying the CEED website with mkdocs, version 0.17.4

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -317,6 +317,7 @@
 <h3 id="publications">Publications</h3>
 <h4 id="2018">2018</h4>
 <ol>
+<li>P. Bello-Maldonado and P. Fischer, <a href="">Scalable Low-Order Finite Element Preconditioners for High-Order Spectral Element Poisson Solvers</a>, submitted, <strong>2018</strong>.</li>
 <li>J. Ceverny, V. Dobrev, and Tz. Kolev, <a href="">Non-Conforming Mesh Refinement For High-Order Finite Elements</a>, submitted, <strong>2018</strong>.</li>
 <li>A. Karakus, N. Chalmers, J.S. Hesthaven and T. Warburton, <a href="https://arxiv.org/abs/1805.02082">Discontinuous Galerkin Discretizations of the Boltzmann Equations in 2D: semi-analytic time stepping and absorbing boundary layers</a>, submitted, <strong>2018</strong>.</li>
 <li>V. Dobrev, P. Knupp, Tz. Kolev, and V. Tomov, <a href="">Towards Simulation-Driven Optimization of High-Order Meshes by the Target-Matrix Optimization Paradigm</a>, <em>27th International Meshing Roundtable, Oct 1-8, 2018, Albuquerque</em>, submitted, <strong>2018</strong>.</li>
