Deploying the CEED website with mkdocs, version 0.17.4

--- a/bps/index.html
+++ b/bps/index.html
@@ -331,11 +331,11 @@ libCEED <a href="https://github.com/CEED/libCEED/blob/master/doc/libCEED.md">doc
 </ul>
 <p>These are all <strong>T-vector</strong>-to-<strong>T-vector</strong> and include parallel scatter +
 element scatter + element evaluation kernel + element gather + parallel gather.</p>
-<p>The boundary conditions for BP1 and BP2 are homogeneous Neumann. For the rest of
-the BPs the boundary conditions are homogeneous Dirichlet.</p>
+<p>The boundary conditions for <strong>BP1</strong> and <strong>BP2</strong> are homogeneous Neumann. For the
+rest of the <strong>BP</strong>s the boundary conditions are homogeneous Dirichlet.</p>
 <p>The nodal points, denoted by $p$, are GLL (Gauss-Legendre-Lobatto), while the
-quadrature points, denoted by $q$, are GL (Gauss-Legendre) for BP1-BP4 and GLL
-for BP5-BP6.</p>
+quadrature points, denoted by $q$, are GL (Gauss-Legendre) for <strong>BP1</strong>-<strong>BP4</strong>
+and GLL for <strong>BP5</strong>-<strong>BP6</strong>.</p>
 <h5 id="bake-off-kernels-bks">Bake-off Kernels (BKs)</h5>
 <ul>
 <li><strong>BK1</strong>: scalar <strong>E-vector</strong>-to-<strong>E-vector</strong> evaluation of mass matrix, $q = p+2$</li>
