--- a/index.html
+++ b/index.html
@@ -346,12 +346,12 @@ The CEED software will also include optimized assembly support for low-order met
     <ul class="nav bs-sidenav">
     <li class="main"><a href="../news/">What's New?</a> </li>
        <li> <a href="http://ceed.exascaleproject.org/ceed2am/">&#9658;&nbsp;CEED2AM in Boulder</a> </li>
+       <li> <a href="http://ceed.exascaleproject.org/fms/">&#9658;&nbsp;libParanumal v0.1 released&nbsp;<span class="label label-primary">New</span></a> </li>
        <li> <a href="http://ceed.exascaleproject.org/fms/">&#9658;&nbsp;FMS v0.1 released&nbsp;<span class="label label-primary">New</span></a> </li>
        <li> <a href="../news/#software-release-occa-v10">&#9658;&nbsp;OCCA v1.0 released&nbsp;<span class="label label-primary">New</span></a> </li>
        <li> <a href="../news/#software-release-mfem-v33">&#9658;&nbsp;MFEM v3.4 released</a> </li>
        <li> <a href="../news/#software-release-ceed-v10">&#9658;&nbsp;CEED v1.0 released</a> </li>
        <li> <a href="../news/#software-release-libceed-v02">&#9658;&nbsp;libCEED v0.2 released</a> </li>
-       <li> <a href="../news/#ceed-participates-in-xsdk-and-fastmath">&#9658;&nbsp;CEED in xSDK, FASTMath</a> </li>
        <li> <a href="../news/">More updates...</a> </li>
     <hr style="background-color:white; height:20px; margin-left:-1px;  margin-right:-1px; margin-top:15px; margin-bottom:10px " />
     <li class="main" style="padding:0"><a href="https://exascaleproject.org/exascale-computing-project/">ECP Co-Design</a> </li>
